[package]
name = "json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["ssr"] }
tests_common = { workspace = true }

[dependencies.leptos_i18n]
workspace = true
features = [
  "json_files",
  "icu_compiled_data",
  "interpolate_display",
  "track_locale_files",
  "plurals",
  "format_datetime",
  "format_nums",
  "format_list",
  "format_currency",
]

[build-dependencies]
leptos_i18n_build = { workspace = true, features = ["pretty_print"] }


[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
