[package]
name = "json5"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8.2", features = ["ssr"] }
tests_common = { path = "../common" }
leptos_i18n = { path = "../../leptos_i18n" }

[build-dependencies]
leptos_i18n_build = { path = "../../leptos_i18n", features = ["pretty_print"] }


[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
