[package]
name = "namespaces"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["ssr"] }
tests_common = { workspace = true }

[dependencies.leptos_i18n]
workspace = true
features = ["interpolate_display", "track_locale_files"]


[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
namespaces = ["first_namespace", "second_namespace"]
