[package]
name = "counter_icu_datagen"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.0-rc0", features = ["csr"] }
leptos_meta = { version = "0.7.0-rc0" }
leptos_i18n = { path = "../../../leptos_i18n", default-features = false, features = [
    "json_files",
    "csr",
    "plurals",
] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = { version = "0.2" }

icu = { version = "1.5", default-features = false } # turn off compiled_data
icu_provider = "1.5"                                # for databake
zerovec = "0.10"                                    # for databake

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]

[build-dependencies]
icu = "1.5"
icu_datagen = "1.5"

[profile.release]
opt-level = "z"
lto = true
