[package]
name = "counter_ranges"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = { version = "0.8.2" }
leptos_i18n = { workspace = true, features = ["csr"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = { version = "0.2" }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]

[build-dependencies.leptos_i18n_build]
workspace = true
features = ["pretty_print", "csr"]
