[package]
name = "csr_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-rc1", features = ["csr"] }
leptos_i18n = { path = "../../../leptos_i18n", features = [
  "csr",
  "plurals",
  "dynamic_load",
  "track_locale_files",
] }
console_error_panic_hook = { version = "0.1" }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
translations-path = "i18n/{locale}.json"

[build-dependencies]
leptos_i18n_build = { path = "../../../leptos_i18n_build" }

[profile.release]
opt-level = "z"
lto = true
