[package]
name = "csr_counter"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
leptos_i18n = { path = "../../../leptos_i18n", features = [
  "csr",
  "plurals",
  "dynamic_load",
] }
console_error_panic_hook = { version = "0.1" }

[build-dependencies.leptos_i18n_build]
path = "../../../leptos_i18n_build"
features = ["pretty_print", "csr", "dynamic_load"]

[profile.release]
opt-level = "z"
lto = true
