[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4", optional = true, features = ["macros"] }
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
leptos_actix = { git = "https://github.com/leptos-rs/leptos", optional = true }
leptos_i18n = { workspace = true, features = ["track_locale_files"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["hydrate", "ssr"]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "leptos/hydrate",
    "leptos_i18n/hydrate",
]
ssr = [
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_i18n/actix",
]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
