[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = { version = "4.4", features = ["macros"] }
leptos = { git = "https://github.com/leptos-rs/leptos", features = ["ssr"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", features = [
    "ssr",
] }
leptos_actix = { git = "https://github.com/leptos-rs/leptos" }
serde = { version = "1", features = ["derive"] }
client = { path = "../client", features = ["ssr"] }
